syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.zupedu.gabrielpedrico";
option java_outer_classname = "Pix";
option objc_class_prefix = "HLW";

package com.zupedu.gabrielpedrico;

service RegistraPixGrpcService {
  rpc registra (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

message PixRequest {
  string name = 1;
}

message PixReply {
  string message = 1;
}

/*Enums*/

enum TipoDeChave{
  UNKNOWN_CHAVE = 0;
  CPF           = 1;
  CELULAR       = 2;
  EMAIL         = 3;
  ALEATORIA     = 4;
}

enum TipoDeConta{
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

/*Registra chave pix*/

message RegistraChavePixRequest {
  string clientId = 1;
  TipoDeChave tipoDeChave = 2;
  string chave = 3;
  TipoDeConta tipoDeConta = 4;
}

message RegistraChavePixResponse{
  string clientId = 1;
  string pixId = 2;
}